try to improve agent mode